パスパラメータの名前をlowerCamelCaseに変更
PHP側の自動生成コードに合わせた
